@@ -1,6 +1,6 @@
 {
   "name": "emigrate",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "This is project introduce to node application with http server and express framework under moleculer engine",
   "main": "index.js",
   "scripts": {
