@@ -3,19 +3,21 @@ import { KnContextInfo } from '@willsofts/will-core';
 import { TknOperateHandler } from "@willsofts/will-serv";
 import { FileInfo, FileSetting, PluginSetting } from "../models/MigrateAlias";
 import { MigrateUtility } from "../utils/MigrateUtility";
+import { PRIVATE_SECTION } from "../utils/EnvironmentVariable";
 
 export class PluginHandler extends TknOperateHandler {
-    
+    public section = PRIVATE_SECTION;    
     public model : KnModel = { name: "tmigrate", alias: { privateAlias: this.section } };
 
     public async perform(plugin: PluginSetting, context: KnContextInfo, model: KnModel = this.model) : Promise<FileInfo | undefined> {
         if(plugin) {
             let res = await this.performDownload(plugin,context,model);
-            this.logger.debug(this.constructor.name+".perform: response",res);
+            if(res && !res.body) this.logger.debug(this.constructor.name+".perform: response",res);
             if(res && res.file) {
                 try {
-                    let fileinfo = await MigrateUtility.getFileInfo(res.file);
+                    let fileinfo = await MigrateUtility.getFileInfo(res.file,res.stat);
                     fileinfo.originalname = res.originalname || res.target;
+                    fileinfo.body = res.body;
                     return fileinfo;
                 } catch(ex: any) {
                     return Promise.reject(this.getDBError(ex));
