@@ -25,7 +25,7 @@
 								<strong class="fa fa-caret-down caret-down"></strong>
 							</a>
 							<ul id="userinfoitemlist" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-								<li><a href="javascript:void(0)" class="dropdown-item accessor-access" id="info_access_version"><em class="fa fa-info-circle"></em><span id="menu_version_label" class="menu-span"> Version: 1.0.11</span></a></li>
+								<li><a href="javascript:void(0)" class="dropdown-item accessor-access" id="info_access_version"><em class="fa fa-info-circle"></em><span id="menu_version_label" class="menu-span"> Version: 1.0.12</span></a></li>
 								<li><a href="javascript:void(0)" class="dropdown-item accessor-access" id="accessor_access_link" title="Last Access"><em class="fa fa-clock-o"></em><span id="last_access_label" class="menu-span"> </span></a></li>						
 								<li class="dropdown-divider divider"></li>
 								<li><a href="javascript:void(0)" class="dropdown-item" id="accessor_profile_link"><em class="fa fa-user"></em><span id="profile_label"> <%=label.get('profile_menu','Profile')%></span></a></li>
