@@ -55,7 +55,7 @@
 													<br/>
 													<div class="row">
 														<div class="col-md-12 text-center">
-															<label class="login-label">v1.0.11</label>
+															<label class="login-label">v1.0.12</label>
 														</div>
 													</div>
 													<div id="ssologinlayer">
